--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
 		<div id="app"> <!-- Load handlebar stuff here -->
 		
 		<script type="text/x-handlebars" data-template-name="index">
-		<table class="table table-striped">
+		<table class="table table-hover">
 				{{#each item in model}}
 					<tr class="result">
 					<td class="select">
