Made instructions more prominent.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,9 +38,9 @@
 		</div>
 	</div>
 
-	<p class="instructions">
+	<div class="alert alert-info instructions">
 		Select the results below which you find relevant:
-	</p>
+	</div>
 
 	<div class="search-results">
 		<div id="app"> <!-- Load handlebar stuff here -->
@@ -63,7 +63,7 @@
 				{{/each}}
 		</table>
 		<div style="margin:auto; text-align:right">
-		<button class="btn btn-medium btn-primary" type="button">
+		<button class="btn btn-medium btn-inverse" type="button">
 			Compare with NN-Descent &rarr;
 		</button>
 		</div>
