--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="wrap">
 
   <script type="text/x-handlebars">
     {{outlet}}
@@ -29,59 +28,76 @@
 		<hr class="divider" />
 	</div>
 
+  <script type="text/x-handlebars" data-template-name="index">
+
 	<div class="search-box">
 		<div class="input-append">
-		  <input class="span6" id="appendedInputButton" type="text"
-				 placeholder="Type your query (quantum, algorithms, ...)"
-				 autofocus="autofocus">
-		  <button class="btn btn-inverse" type="button">Search</button>
+		  {{view App.Searchbox valueBinding="query" class="span6"}}
+		  <button class="btn btn-inverse" type="button" {{action "doSearch"}}>Search</button>
 		</div>
 	</div>
 
-	<div class="alert alert-info instructions">
-		Select the results below which you find relevant:
-	</div>
 
-	<div class="search-results">
-		<div id="app"> <!-- Load handlebar stuff here -->
-		
-		<script type="text/x-handlebars" data-template-name="index">
-		<table class="table table-hover">
-				{{#each item in model}}
-					<tr class="result">
-					<td class="select">
-							<input type="checkbox" />
-					</td>
-					<td>					
-							<p class="result-title">{{item.title}}</p>
-							<p class="result-summary">{{item.summary}}</p>
-		
-					</td>
-					</tr>
-				{{else}}
-					<tr><td>No results found.</td></tr>
-				{{/each}}
-		</table>
-		<div style="margin:auto; text-align:right">
-		<button class="btn btn-medium btn-inverse" type="button">
-			Compare with NN-Descent &rarr;
-		</button>
-		</div>
-		</script>
+        {{#if model}}
+        <div class="alert alert-info instructions">
+            Select the results below which you find relevant:
+        </div>
 
-		</div>
-	</div>
+        <div class="search-results">
+            <table class="table table-hover">
+                {{#each item in model}}
+                <tr class="result">
+                    <td class="select">
+                        {{view view.resultCheckbox
+                        contentBinding="item"
+                        controllerBinding="this"
+                        checkedBinding="index.view.checked"}}
+                    </td>
+                    <td>
+                        <p class="result-title">{{item.title}}</p>
+                        <p class="result-summary">{{item.summary}}</p>
 
-	<div id="push"></div>
-</div>
+                    </td>
+                </tr>
+                {{/each}}
+            </table>
+            <div style="margin:auto; text-align:right">
+                <button class="btn btn-medium btn-inverse" type="button" {{action "sendRelevant"}}>
+                Compare with NN-Descent &rarr;
+                </button>
+            </div>
+        </div>
+        {{/if}}
 
-<div id="footer">
-  Created with Ember.js and Bootstrap
-</div>
+	</script>
+
+    <script type="text/x-handlebars" data-template-name="search">
+
+      {{#if model}}
+      <div class="alert alert-info instructions" style="margin-top: 20px">
+          Blah blah blah
+      </div>
+
+      <div class="search-results">
+          <table class="table table-hover">
+              {{#each item in model}}
+              <tr class="result">
+                  <td>
+                      <p class="result-title">{{item.title}}</p>
+                      <p class="result-summary">{{item.summary}}</p>
+
+                  </td>
+              </tr>
+              {{/each}}
+          </table>
+      </div>
+      {{/if}}
+    </script>
+
 
 <script src="js/libs/jquery-1.9.1.js"></script>
 <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
-<script src="js/libs/ember-1.0.0-rc.3.js"></script>
+<script src="js/libs/ember-1.0.0-rc.2.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/app.js"></script>
 
